--- a/myblog/controller/pom.xml
+++ b/myblog/controller/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>controller</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.shore</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
