--- a/myblog/service/pom.xml
+++ b/myblog/service/pom.xml
@@ -9,9 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>service</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.shore</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.shore</groupId>
             <artifactId>common</artifactId>
